Made use of openapi for /join-game and /leave-game, added HTTP statuses
